<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout style="@style/Header">
            <TextView
                android:id="@+id/btBackToDiagnoseList"
                style="@style/H1"
                android:text="@string/new_diagnose_header_text" />
        </LinearLayout>

        <com.example.healthconnect.views.LabeledInputField
            android:id="@+id/etDiagnoseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:hintText="@string/full_disease_name"
            app:labelText="@string/name" />

        <com.example.healthconnect.views.SelectableAutocompleteView
            android:id="@+id/saDiagnoseSymptoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:displayDirection="vertical"
            app:hintText="@string/type_to_search"
            app:labelText="@string/symptoms" />
        <com.example.healthconnect.views.SelectableAutocompleteView
            android:id="@+id/saDiagnoseTreatments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:displayDirection="vertical"
            app:hintText="@string/type_to_search"
            app:labelText="@string/treatments" />

        <Button
            android:id="@+id/btSubmitDiagnose"
            style="@style/PrimaryBtn"
            android:text="@string/add_diagnose" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
