<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header with Back Button and Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        style="@style/AppTheme">

        <LinearLayout
            android:id="@+id/headerLayout"
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btUpdAppointmentToMain"
                style="@style/H1"
                android:text="@string/appointmentsUpdate" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/patientInfoLayout"
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPatientInfo"
                style="@style/FieldLabel"
                android:text="@string/nameField" />
            <TextView
                android:id="@+id/patientName"
                style="@style/H2"
                android:textColor="@android:color/darker_gray"
                android:text="@string/appointment_patient_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/startDateLayout"
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/FieldLabel"
                android:text="@string/dateAppointment" />

            <EditText
                android:id="@+id/etStartDate"
                style="@style/FieldInput"
                android:hint="@string/dateFormat"
                android:inputType="date"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/startTimeLayout"
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/FieldLabel"
                android:text="@string/startTime" />

            <EditText
                android:id="@+id/etStartTime"
                style="@style/FieldInput"
                android:hint="@string/timeFormat"
                android:inputType="time"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endTimeLayout"
            style="@style/Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/FieldLabel"
                android:text="@string/endTime" />

            <EditText
                android:id="@+id/etEndTime"
                style="@style/FieldInput"
                android:hint="@string/timeFormat"
                android:inputType="time"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primary"
            android:text="@string/update_appointment"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnCancelAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel_appointment"
            android:textColor="@color/primary"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- Patient Info -->

    <!-- Start Date Field -->

    <!-- Duration Field -->

    <!-- Update Appointment Button -->

    <!-- Cancel Appointment Button -->

</androidx.constraintlayout.widget.ConstraintLayout>
