<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout style="@style/Header">
            <TextView
                android:id="@+id/btSymptomFormToSymptomList"
                style="@style/H1"
                android:text="@string/new_symptom_header_text" />
        </LinearLayout>

        <com.example.healthconnect.views.LabeledInputField
            android:id="@+id/etSymptomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:hintText="@string/full_symptom_name"
            app:labelText="@string/name" />

        <Button
            android:id="@+id/btSubmitSymptom"
            style="@style/PrimaryBtn"
            android:text="@string/add_symptom" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>