<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    style="@style/AppTheme"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout style="@style/Header">
        <TextView android:id="@+id/btBackToMain" style="@style/H1" android:text="@string/patient_list_header_text" />
        <TextView android:id="@+id/btToPatientForm" style="@style/LinkText" android:text="@string/add_new" />
    </LinearLayout>

    <LinearLayout style="@style/Field">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/sVPatientList"
            style="@style/FieldInput"
            android:padding="5dp"
            android:hint="@string/search_placeholder"
            android:queryHint="@string/search_placeholder" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPatientList"
        style="@style/ListItems"
        android:layout_weight="1" />

</LinearLayout>
