<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/AppTheme"
        >

        <LinearLayout style="@style/Header">
            <TextView android:id="@+id/btBackToMain" style="@style/H1" android:text="@string/medication_list_header_text" />
            <TextView android:id="@+id/btToMedicationForm" style="@style/LinkText" android:text="@string/add_new" />
        </LinearLayout>

        <LinearLayout style="@style/Field">
            <androidx.appcompat.widget.SearchView
                android:id="@+id/sVMedicationList"
                style="@style/FieldInput"
                android:padding="5dp"
                android:hint="@string/search_placeholder"
                android:queryHint="@string/search_placeholder" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMedicationList"
            style="@style/ListItems"
            android:layout_weight="1" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>